--- a/index.html
+++ b/index.html
@@ -5,17 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Press+Start+2P&display=swap" rel="stylesheet">
+
     
 </head>
 <body>
     <div class="mainContainer">
 
-    <div class="cover"></div>
-    <canvas class="">
+    <div class="cover" id="cover"></div>
 
-    </canvas>
+    <div class="healthbar-first">
+        <p class="name">Draggle</p>
+        <div class="health-meter-container">
+        <div class="heath-meter"></div>
+        <div class="heath-meter-full"></div>
     </div>
-    
+    </div>
+    <div class="healthbar-first second">
+        <p class="name">Emby</p>
+        <div class="health-meter-container">
+        <div class="heath-meter"></div>
+        <div class="heath-meter-full"></div>
+    </div>
+    </div>
+
+
+    <canvas class=""></canvas>
+
+    <div class="attack-bar">
+        <div class="attack-container">
+        <div class="attack">
+            <button class="attackbtn">Tackle</button>
+            <button class="attackbtn">Fireball</button>
+            <button class="attackbtn">-</button>
+            <button class="attackbtn">-</button>
+        </div>
+        </div>
+        <div class="type-container">
+            <h1>Attack Type</h1>
+        </div>
+    </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src ='./data/collisions.js'></script>
     <script src ='./data/battlezones.js'></script>
     <script src ='classes.js'></script>
